# cubeb-rs

cubeb-api/: Cargo.toml
cubeb-api/src/: stream.rs
cubeb-backend/: Cargo.toml
cubeb-backend/src/: capi.rs  log.rs
cubeb-core/: Cargo.toml
cubeb-core/src/: device.rs  device_collection.rs  log.rs
cubeb-sys/: Cargo.toml  build.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
