[package]
name = "cubeb"
version = "0.35.2"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
edition = "2021"
license = "ISC"
readme = "README.md"
keywords = ["cubeb"]
repository = "https://github.com/mozilla/cubeb-rs"
homepage = "https://github.com/mozilla/cubeb-rs"
description = """
Bindings to libcubeb for interacting with system audio from rust.
"""
categories = ["api-bindings"]

[badges]
circle-ci = { repository = "mozilla/cubeb-rs" }

[features]
gecko-in-tree = ["cubeb-core/gecko-in-tree"]
no-private-apis-in-coreaudio = ["cubeb-core/no-private-apis-in-coreaudio"]

[dependencies]
cubeb-core = { path = "../cubeb-core", version = "0.35.2" }
