[package]
name = "cubeb-backend"
version = "0.35.1"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
edition = "2021"
license = "ISC"
keywords = ["cubeb"]
repository = "https://github.com/mozilla/cubeb-rs"
homepage = "https://github.com/mozilla/cubeb-rs"
description = """
Bindings to libcubeb internals to facilitate implementing cubeb backends in rust.
"""
categories = ["api-bindings"]

[badges]
circle-ci = { repository = "mozilla/cubeb-rs" }

[features]
gecko-in-tree = ["cubeb-core/gecko-in-tree"]
no-private-apis-in-coreaudio = ["cubeb-core/no-private-apis-in-coreaudio"]

[dependencies]
cubeb-core = { path = "../cubeb-core", version = "0.35.1" }

[dev-dependencies]
regex = "1.11"
