[package]
name = "cubeb-core"
version = "0.35.2"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
edition = "2021"
license = "ISC"
keywords = ["cubeb"]
repository = "https://github.com/mozilla/cubeb-rs"
homepage = "https://github.com/mozilla/cubeb-rs"
description = """
Common types and definitions for cubeb rust and C bindings. Not intended for direct use.
"""
categories = ["api-bindings"]

[badges]
circle-ci = { repository = "mozilla/cubeb-rs" }

[features]
gecko-in-tree = ["cubeb-sys/gecko-in-tree"]
no-private-apis-in-coreaudio = ["cubeb-sys/no-private-apis-in-coreaudio"]

[dependencies]
bitflags = "1.2.0"
cubeb-sys = { path = "../cubeb-sys", version = "0.35" }

[build-dependencies]
cc = "1.1.30"
